--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prepare": "husky install",
     "lint:eslint": "eslint src/**/*.ts",
     "lint:ts": "tsc --noEmit",
-    "lint": "npm run lint:eslint && npm run lint:ts"
+    "lint": "npm run lint:eslint && npm run lint:ts",
+    "cy:run": "cypress run --browser chromium",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "lit": "^2.6.1"
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
+    "cypress": "^12.12.0",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
