Fix build workflow to be run on `main` not `master` branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
-name: evento-portal Build 🚀
+name: Build & Deployment 🚀
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
