--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "npm run dev",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -19,6 +20,7 @@
     "format:upgrade": "npm install --save-exact prettier@latest && npm run format"
   },
   "dependencies": {
+    "@badgateway/oauth2-client": "^2.2.0",
     "@lit/localize": "^0.11.4",
     "lit": "^2.6.1"
   },
