--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@badgateway/oauth2-client": "^2.2.0",
+    "@lit-app/state": "^0.8.4",
     "@lit/localize": "^0.11.4",
     "lit": "^2.6.1"
   },
