--- a/.github/workflows/deployTestEnv.yml
+++ b/.github/workflows/deployTestEnv.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           npm run build
           sed -i "s/example/schoolWeb/" dist/settings.example.js
-          sed -i "s/eventotest.api/eventoapp-test.erz.be.ch/" dist/settings.example.js > dist/settings.js
+          sed -i "s/eventotest.api/eventoapp-test.erz.be.ch/" dist/settings.example.js
+          mv  dist/settings.example.js  dist/settings.js
     
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
