--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/typings.d.ts", "src", "public/settings*.js"]
+  "include": ["src/typings.d.ts", "src", "public/**/*.js"]
 }
