--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build & Deployment 🚀
 
 on:
   push:
-    branches: [main]
+    branches: [main, feature-Deploy-Test-Env-main]
 
 jobs:
   build:
