add sleep 60 workaround for deploy to gh-pages (#40)
* deploy Test Env also on main branch

* build zip file

* test replace actions

* sleep 60 sec do not abort build.yml

* remove branch to test on github action

--- a/.github/workflows/deployTestEnv.yml
+++ b/.github/workflows/deployTestEnv.yml
@@ -31,6 +31,7 @@ jobs:
           sed -i "s/example/schoolWeb/" dist/settings.example.js
           sed -i "s/eventotest.api/eventoapp-test.erz.be.ch/" dist/settings.example.js
           mv  dist/settings.example.js  dist/settings.js
+          sleep 60
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
