fix path in dockerfile

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,5 +1,5 @@
 #FROM registry.ci-bedag.ch/docker_base/nginx:1.24
 FROM docker.io/nginx
-COPY dist/evento-portal /usr/share/nginx/html
+COPY ../dist/evento-portal /usr/share/nginx/html
 
 ## Nginx base config läuft auf port 80.
