--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: container
+          context: .
           push: true
           tags:
             ${{ steps.meta.outputs.tags }}
