fix registry url

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -52,7 +52,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ REGISTRY }}/${{ env.IMAGE_NAME }}
+            ghcr.io/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=test-ci
             type=semver,pattern={{version}},value=v1.0.0
