--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -2,4 +2,4 @@
 FROM docker.io/nginx
 COPY ../dist/evento-portal /usr/share/nginx/html
 
-## Nginx base config läuft auf port 80.
+## Nginx base config is running on port 80
