--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -40,7 +40,16 @@ jobs:
           mkdir dist
           mv evento-portal dist
 
-      - name: Login to Registry
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.64.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          INITIAL_VERSION: 1.0.0
+          WITH_V: true
+          DRY_RUN: true
+          VERBOSE: true
+
+      - name: Login to Docker registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
