--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -46,8 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           INITIAL_VERSION: 1.0.0
           WITH_V: true
-          DRY_RUN: true
-          VERBOSE: true
 
       - name: Login to Docker registry
         uses: docker/login-action@v2
@@ -64,7 +62,7 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
-            type=semver,pattern={{version}},value=v1.0.0
+            type=semver,pattern={{version}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
