--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,8 +7,15 @@ name: Build & Push Docker Image 🚀
 # well (e.g. `v1.3.0`). For more details, see README.md.
 
 on:
-  push:
-    branches: [test-ci, production-ci]
+  # This workflow should only run on the release branches, when a PR
+  # has been merged (each job must include the
+  # `github.event.pull_request.merged == true` condition)
+  pull_request:
+    branches:
+      - test-ci
+      - production-ci
+    types:
+      - closed
 
 env:
   REGISTRY: ghcr.io
@@ -17,6 +24,7 @@ env:
 jobs:
   prerequisites:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
 
     outputs:
       version: ${{ steps.extract-version.outputs.version }}
@@ -43,7 +51,7 @@ jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
     needs: prerequisites
-    if: needs.prerequisites.outputs.version == ''
+    if: github.event.pull_request.merged == true && needs.prerequisites.outputs.version == ''
 
     strategy:
       matrix:
@@ -110,7 +118,7 @@ jobs:
   retag-and-push-image:
     runs-on: ubuntu-latest
     needs: prerequisites
-    if: needs.prerequisites.outputs.version != ''
+    if: github.event.pull_request.merged == true && needs.prerequisites.outputs.version != ''
 
     steps:
       - name: Login to Docker registry
