--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -28,3 +28,5 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: "automerge, deployment"
           MERGE_METHOD: "rebase"
+          MERGE_READY_STATE: "clean"
+          UPDATE_METHOD: "rebase"
