--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -26,5 +26,6 @@ jobs:
         uses: "pascalgn/automerge-action@v0.15.6"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          MERGE_LABELS: "automerge, deployment"
-          MERGE_METHOD: "rebase"
+          MERGE_LABELS:
+            "automerge, deployment"
+            #MERGE_METHOD: "rebase"
