--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -30,8 +30,7 @@ jobs:
       - name: merge branches
         run: |
           git fetch
-          git checkout ${{ inputs.sourceBranch }}
-          git merge --ff-only ${{ inputs.targetBranch }}
           git checkout ${{ inputs.targetBranch }}
+          git merge --ff-only ${{ inputs.sourceBranch }}
           git log -n 1 --tags
           git push
