--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -105,6 +105,7 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=${{ github.ref_name }}
+            type=semver,pattern={{version}},value=${{ github.ref_name }}-${{ steps.tag.outputs.new_tag }}
             type=semver,pattern={{version}},value=${{ steps.tag.outputs.new_tag }}
 
       - name: Build and push Docker image
@@ -133,7 +134,9 @@ jobs:
         env:
           VERSION_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.container-prerequisites.outputs.version }}
           BRANCH_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          BRANCH_VERSION_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.container-prerequisites.outputs.version }}-${{ github.ref_name }}
         run: |
           docker pull ${{ env.VERSION_IMAGE }}
           docker tag ${{ env.VERSION_IMAGE }} ${{ env.BRANCH_IMAGE }}
+          docker tag ${{ env.VERSION_IMAGE }} ${{ env.BRANCH_VERSION_IMAGE }}
           docker push ${{ env.BRANCH_IMAGE }}
