--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -104,7 +104,7 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=${{ github.ref_name }}
+            #type=raw,value=${{ github.ref_name }}
             type=raw,value=${{ github.ref_name }}-${{ steps.tag.outputs.new_tag }}
             type=semver,pattern={{version}},value=${{ steps.tag.outputs.new_tag }}
 
@@ -137,6 +137,6 @@ jobs:
           BRANCH_VERSION_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.container-prerequisites.outputs.version }}-${{ github.ref_name }}
         run: |
           docker pull ${{ env.VERSION_IMAGE }}
-          docker tag ${{ env.VERSION_IMAGE }} ${{ env.BRANCH_IMAGE }}
+          #docker tag ${{ env.VERSION_IMAGE }} ${{ env.BRANCH_IMAGE }}
           docker tag ${{ env.VERSION_IMAGE }} ${{ env.BRANCH_VERSION_IMAGE }}
           docker push ${{ env.BRANCH_IMAGE }}
