--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -104,7 +104,7 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=${{ github.ref_name }}
+            type=raw,value=${{ steps.tag.outputs.new_tag }}-${{ github.ref_name }}
             type=semver,pattern={{version}},value=${{ steps.tag.outputs.new_tag }}
 
       - name: Build and push Docker image
@@ -133,7 +133,8 @@ jobs:
         env:
           VERSION_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.container-prerequisites.outputs.version }}
           BRANCH_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          BRANCH_VERSION_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v${{ needs.container-prerequisites.outputs.version }}-${{ github.ref_name }}
         run: |
           docker pull ${{ env.VERSION_IMAGE }}
-          docker tag ${{ env.VERSION_IMAGE }} ${{ env.BRANCH_IMAGE }}
-          docker push ${{ env.BRANCH_IMAGE }}
+          docker tag ${{ env.VERSION_IMAGE }} ${{ env.BRANCH_VERSION_IMAGE }}
+          docker push ${{ env.BRANCH_VERSION_IMAGE }}
