deploy main to netlify push pull
Deploy main branch to netlify on push and pull request. First you can do code review and next to the review you can do integration tests on netlify.

--- a/.github/workflows/deployTestEnv.yml
+++ b/.github/workflows/deployTestEnv.yml
@@ -1,9 +1,11 @@
-name: Deploy Test Env 🚀
+name: Deploy MAIN to Netlify 🚀
 
 on:
   push:
-    branches: [main]
-
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+    
 jobs:
   build:
     runs-on: ubuntu-latest
