gem:26673 fix also user with role LessonTeacher use portal

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:ts": "tsc --noEmit",
     "lint": "npm run lint:eslint && npm run lint:ts",
     "cy:run": "cypress run --browser chromium",
+    "cy:firefox": "cypress run --browser firefox",
     "cy:open": "cypress open",
     "locale:extract": "lit-localize extract",
     "locale:build": "lit-localize build",
