--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
     "format:upgrade": "npm install --save-exact prettier@latest && npm run format"
   },
   "dependencies": {
-    "@badgateway/oauth2-client": "^2.2.0",
+    "@badgateway/oauth2-client": "^2.2.4",
     "@lit-app/state": "^0.8.4",
     "@lit/localize": "^0.11.4",
     "lit": "^2.6.1"
   },
   "devDependencies": {
-    "@lit/localize-tools": "^0.6.9",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "cypress": "^12.12.0",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@lit/localize-tools": "~0.6.9",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "cypress": "^13.3.2",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "prettier": "2.8.8",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "lint-staged": "^15.0.2",
+    "prettier": "3.0.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
