--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -22,15 +22,15 @@ jobs:
         if: github.ref_name == 'test'
         uses: ./.github/workflows/actions/merge-ff-only
         with:
-          target-ref: 'test'
-          base-ref: 'main'
+          target-ref: "test"
+          base-ref: "main"
 
       - name: merge into production
         if: github.ref_name == 'production'
         uses: ./.github/workflows/actions/merge-ff-only
         with:
-          target-ref: 'production'
-          base-ref: 'test'
+          target-ref: "production"
+          base-ref: "test"
 
   container-prerequisites:
     runs-on: ubuntu-latest
@@ -51,7 +51,7 @@ jobs:
 
   # If the current commit has no version tag, an image needs to be
   # built, tagged and pushed to the registry
-  # If the build runs on test but test has already been built 
+  # If the build runs on test but test has already been built
   # with the latest tag, nothing happens
   container-build-and-push-image:
     runs-on: ubuntu-latest
