Add minimal PWA setup for installability using the Vite PWA plugin #61

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,9 @@ name: Lint & Test ✨
 
 on: [push, pull_request]
 
+env:
+  DISABLE_SERVICE_WORKER: "true"
+
 jobs:
   test:
     runs-on: ubuntu-latest
