--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "scripts": {
     "start": "npm run dev",
+    "start:browserstack": "SSL=true vite --host bs-local.com --port 3000",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -41,6 +42,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "cypress": "^13.3.2",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
