--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@badgateway/oauth2-client": "^2.2.4",
     "@lit-app/state": "^0.8.4",
     "@lit/localize": "^0.11.4",
+    "dompurify": "^3.0.6",
     "lit": "^2.6.1"
   },
   "devDependencies": {
     "@lit/localize-tools": "~0.6.9",
     "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "@types/dompurify": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
