--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cypress": "^13.6.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-lit-a11y": "^4.1.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "prettier": "3.1.1",
