Expicitely fetch and checkout latest HEAD of release branch

--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -65,12 +65,16 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
-        with:
-          # Make sure we actually fetch the HEAD with the previously
-          # merged commits from main, instead of the latest commit of
-          # the release branch at the time this workflow has been
-          # started (before merge)
-          ref: HEAD
+
+      # Make sure we actually checkout the HEAD with the previously
+      # merged commits from main, instead of the latest commit of the
+      # release branch at the time this workflow has been started
+      # (before merge)
+      - name: Checkout latest commit
+        run: |
+          git fetch --prune --tags
+          git checkout HEAD
+          git log -n 1
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
