--- a/.github/workflows/hotfix-container-build.yml
+++ b/.github/workflows/hotfix-container-build.yml
@@ -10,6 +10,7 @@ permissions:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  NODE_VERSION: 20
 
 jobs:
   container-prerequisites:
@@ -37,18 +38,14 @@ jobs:
     needs: container-prerequisites
     if: needs.container-prerequisites.outputs.version == ''
 
-    strategy:
-      matrix:
-        node-version: [20]
-
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.version }}
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Install dependencies 🔧
