--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,23 +4,20 @@ on: [push, pull_request]
 
 env:
   DISABLE_SERVICE_WORKER: "true"
+  NODE_VERSION: 20
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20]
-
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.version }}
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Install dependencies 🔧
