--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -1,11 +1,8 @@
-name: Build & Deploy ZIP 📦
+name: Build & ZIP
 
 on:
   push:
     branches: [main]
-
-env:
-  NODE_VERSION: 20
 
 jobs:
   build:
@@ -15,10 +12,14 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ env.NODE_VERSION }}
+      - name: Read .nvmrc
+        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT
+        id: nvm
+
+      - name: Use Node.js ${{ steps.nvm.outputs.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
           cache: "npm"
 
       - name: Install dependencies 🔧
@@ -33,7 +34,7 @@ jobs:
           cd dist && zip --recurse-paths evento-portal.zip *
           rm -rf evento-portal
 
-      - name: Deploy 🚀
+      - name: Deploy ZIP 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
