--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "preview:ssl": "echo \"Don't forget to set oAuthClientId: 'browserstack' in public/settings.js\nThe app will be running on https://bs-local.com:3000\" && (cd dist && HOST=bs-local.com PORT=3000 npx https-localhost)",
-    "prepare": "husky install",
     "analyze": "npx vite-bundle-visualizer",
+    "lint": "npm run lint:eslint && npm run lint:ts",
     "lint:eslint": "eslint src/**/*.ts",
     "lint:ts": "tsc --noEmit",
-    "lint": "npm run lint:eslint && npm run lint:ts",
+    "test": "npm run cy:run",
     "cy:run": "cypress run --browser chromium",
     "cy:firefox": "cypress run --browser firefox",
     "cy:open": "cypress open --e2e",
@@ -33,29 +33,29 @@
     "unused": "npx knip"
   },
   "dependencies": {
-    "@badgateway/oauth2-client": "^2.2.4",
+    "@badgateway/oauth2-client": "^2.3.0",
     "@lit-app/state": "^1.0.0",
     "@lit/localize": "^0.12.1",
-    "dompurify": "^3.0.8",
-    "lit": "^3.1.1"
+    "dompurify": "^3.1.5",
+    "lit": "^3.1.4"
   },
   "devDependencies": {
-    "@lit/localize-tools": "~0.7.1",
+    "@lit/localize-tools": "~0.7.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/dompurify": "^3.0.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
-    "cypress": "^13.6.3",
+    "cypress": "^13.11.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-lit-a11y": "^4.1.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "prettier": "3.2.4",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.13",
-    "vite-plugin-pwa": "^0.17.4"
+    "eslint-plugin-lit-a11y": "^4.1.2",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "prettier": "3.3.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.3.1",
+    "vite-plugin-pwa": "^0.20.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
