--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/typings.d.ts", "src", "public/**/*.js"],
+  "include": ["src/typings.d.ts", "src", "public/**/*.js"]
 }
