--- a/package.json
+++ b/package.json
@@ -40,20 +40,20 @@
     "lit": "3.2.1"
   },
   "devDependencies": {
+    "@eslint/js": "9.12.0",
     "@lit/localize-tools": "0.8.0",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/dompurify": "3.0.5",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
     "@vitejs/plugin-basic-ssl": "1.1.0",
     "cypress": "13.15.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-lit-a11y": "^4.1.2",
+    "eslint-plugin-lit-a11y": "^4.1.4",
     "husky": "9.1.6",
     "lint-staged": "15.2.10",
     "prettier": "3.3.3",
-    "typescript": "5.6.3",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.9.0",
     "vite": "5.4.9",
     "vite-plugin-pwa": "0.20.5"
   },
