--- a/package.json
+++ b/package.json
@@ -36,25 +36,25 @@
     "@badgateway/oauth2-client": "2.4.2",
     "@lit-app/state": "1.0.0",
     "@lit/localize": "0.12.2",
-    "dompurify": "3.2.1",
+    "dompurify": "3.2.3",
     "lit": "3.2.1"
   },
   "devDependencies": {
-    "@eslint/js": "9.15.0",
+    "@eslint/js": "9.16.0",
     "@lit/localize-tools": "0.8.0",
-    "@trivago/prettier-plugin-sort-imports": "4.3.0",
-    "@vitejs/plugin-basic-ssl": "1.1.0",
-    "cypress": "13.16.0",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-lit-a11y": "^4.1.4",
+    "@trivago/prettier-plugin-sort-imports": "5.2.0",
+    "@vitejs/plugin-basic-ssl": "1.2.0",
+    "cypress": "13.16.1",
+    "eslint": "9.16.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-lit-a11y": "4.1.4",
     "husky": "9.1.7",
-    "lint-staged": "15.2.10",
-    "prettier": "3.3.3",
+    "lint-staged": "15.2.11",
+    "prettier": "3.4.2",
     "typescript": "5.7.2",
-    "typescript-eslint": "^8.15.0",
-    "vite": "5.4.11",
-    "vite-plugin-pwa": "0.21.0"
+    "typescript-eslint": "8.18.0",
+    "vite": "6.0.3",
+    "vite-plugin-pwa": "0.21.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
